--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -68,6 +68,19 @@
 			<div class="ShowInLineup Clock Lineup Small Box AutoFit" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
 			<div class="ShowInTimeout Clock Timeout Small Box AutoFit" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
 
+			<!-- Sponsor Banners -->
+			<div class="ShowInTimeout ShowInLineup Clock" id="SponsorBox">
+				<div class="NextImg">
+					<img src="" style="display: none;" />
+				</div>
+				<div class="CurrentImg">
+					<img src="" style="display: none;" />
+				</div>
+				<div class="FinishedImg">
+					<img src="" style="display: none;" />
+				</div>
+			</div>
+
 			<!-- Intermission -->
 			<div class="ShowInIntermission Clock Intermission">
 				<div class="Message Box AutoFit" sbDisplay="Settings.ScoreBoard.Intermission.PreGame, Settings.ScoreBoard.Intermission.Intermission, Settings.ScoreBoard.Intermission.Unofficial, Settings.ScoreBoard.Intermission.Official, OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
