--- a/html/controls/lt/lt.css
+++ b/html/controls/lt/lt.css
@@ -1,30 +1,30 @@
-body {	
+.LT, #FieldingEditor {	
 	font-size: 11pt;
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
-table,tr,td {
+table.LT, .LT table,.LT tr, .LT td, #FieldingEditor table, #FieldingEditor tr, #FieldingEditor td {
 	border-collapse: collapse;
 	border-color:#777;
 }
-tr {
+.LT tr {
     color: #333;
 }
-#head { font-size: 200%; text-align: center; background-color: #222; color: #FFF; }
-.Hide { display: none; }
-.Period { width: 100%; table-layout:fixed; }
-.Period thead td { font-size: 95%; background-color: #222; color: #FFF; }
-.Period td { text-align: center; vertical-align: center; }
-.Period tbody tr { background-color: #FFF; }
-.Period tbody tr:nth-child(4n+0), .Period tr:nth-child(4n-1) { background-color: #e7f3ff; }
-.Period tbody tr .Darker { background-color: #e7f3ff; }
-.Period tbody tr:nth-child(4n+0) .Darker, .Period tr:nth-child(4n-1) .Darker { background-color: #cee7ff; }
-.Period tbody .Box { background-color: #b6daff; }
-.Period .JamNumber { width: 30px;}
-.Period .NP { width: 25px; }
-.Period .Skater { width: 12%; }
-.Period .Box { width: 8%; }
+.LT .Hide, #FieldingEditor .Hide { display: none; }
+.LT #head { font-size: 200%; text-align: center; background-color: #222; color: #FFF; }
+.LT.Period { width: 100%; table-layout:fixed; margin-top: 0.5em; }
+.LT.Period thead td { font-size: 95%; background-color: #222; color: #FFF; }
+.LT.Period td { text-align: center; vertical-align: middle; }
+.LT.Period tbody tr { background-color: #FFF; }
+.LT.Period tbody tr:nth-child(4n+0), .LT.Period tr:nth-child(4n-1) { background-color: #e7f3ff; }
+.LT.Period tbody tr .Darker { background-color: #e7f3ff; }
+.LT.Period tbody tr:nth-child(4n+0) .Darker, .LT.Period tr:nth-child(4n-1) .Darker { background-color: #cee7ff; }
+.LT.Period tbody .Box { background-color: #b6daff; }
+.LT.Period .JamNumber { width: 30px;}
+.LT.Period .NP { width: 25px; }
+.LT.Period .Skater { width: 12%; }
+.LT.Period .Box { width: 8%; }
 
-.FieldingEditor .tripHeader { text-align: center; font-size: 95%; background-color: #222; color: #FFF; }
-.FieldingEditor .Col3 { text-align: center; }
+#FieldingEditor .tripHeader { text-align: center; font-size: 95%; background-color: #222; color: #FFF; }
+#FieldingEditor .Col3 { text-align: center; }
 
-.FieldingEditor .BoxTrip>td, .FieldingEditor .Skater>td { padding: 0.5em 0em; }
+#FieldingEditor .BoxTrip>td, #FieldingEditor .Skater>td { padding: 0.5em 0em; }
