--- a/html/controls/sk/sk.css
+++ b/html/controls/sk/sk.css
@@ -1,29 +1,29 @@
-body {	
+.SK, #TripEditor {	
 	font-size: 11pt;
-/*	background-color: #333;*/
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
-table,tr,td {
+table.SK, .SK .table, .SK tr, .SK td, #TripEditor table, #TripEditor tr, #TripEditor td {
 	border-collapse: collapse;
 	border-color:#777;
 }
-tr {
+.SK tr {
     color: #333;
 }
-.Hide { display: none; }
-.Period { width: 100%; table-layout:fixed; }
-.Period thead td { font-size: 95%; background-color: #222; color: #FFF; }
-.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg); }
-.Period td { text-align: center; vertical-align: center; }
-.Period tr { background-color: #FFF; }
-.Period tr:nth-child(4n+0), .Period tr:nth-child(4n-1) { background-color: #e9f6da; }
-.Period tr .Darker { background-color: #e9f6da; }
-.Period tr:nth-child(4n+0) .Darker, .Period tr:nth-child(4n-1) .Darker { background-color: #d3ecb6; }
-.Period .JamNumber { width: 30px; }
-.Period .Jammer { width: 50px; }
-.Period .Narrow, .Period .SmallHead { width: 14px; }
-.Period #head { font-size: 200%; }
-.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; }
-.Period .GameTotal { background-color: #d3ecb6; }
+.SK.Hide { display: none; }
+.SK.Period { width: 98%; table-layout:fixed; margin: 1%; }
+.SK.Period thead td { font-size: 95%; background-color: #222; color: #FFF; }
+.SK.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg); }
+.SK.Period td { text-align: center; vertical-align: center; }
+.SK.Period tr { background-color: #FFF; }
+.SK.Period tr:nth-child(4n+0), .Period tr:nth-child(4n-1) { background-color: #e9f6da; }
+.SK.Period tr .Darker { background-color: #e9f6da; }
+.SK.Period tr:nth-child(4n+0) .Darker, .Period tr:nth-child(4n-1) .Darker { background-color: #d3ecb6; }
+.SK.Period .JamNumber { width: 30px; }
+.SK.Period .Jammer { width: 50px; }
+.SK.Period .Narrow, .Period .SmallHead { width: 14px; }
+.SK.Period #head { font-size: 200%; }
+.SK.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; }
+.SK.Period .GameTotal { background-color: #d3ecb6; }
 
-.TripEditor input[type="number"] { width: 50px; }
+#TripEditor input[type="number"] { width: 50px; }
+#TripEditor td { padding-bottom: 0.5em; }
