--- a/html/controls/sk/sk.css
+++ b/html/controls/sk/sk.css
@@ -9,15 +9,15 @@ table.SK, .SK .table, .SK tr, .SK td, #TripEditor table, #TripEditor tr, #TripEd
 .SK tr {
     color: #333;
 }
-.SK.Hide { display: none; }
+.SK .Hide { display: none; }
 .SK.Period { width: 98%; table-layout:fixed; margin: 1%; }
 .SK.Period thead td { font-size: 95%; background-color: #222; color: #FFF; }
 .SK.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg); }
-.SK.Period td { text-align: center; vertical-align: center; }
+.SK.Period td { text-align: center; vertical-align: middle; }
 .SK.Period tr { background-color: #FFF; }
-.SK.Period tr:nth-child(4n+0), .Period tr:nth-child(4n-1) { background-color: #e9f6da; }
+.SK.Period tr:nth-child(4n+0), .SK.Period tr:nth-child(4n-1) { background-color: #e9f6da; }
 .SK.Period tr .Darker { background-color: #e9f6da; }
-.SK.Period tr:nth-child(4n+0) .Darker, .Period tr:nth-child(4n-1) .Darker { background-color: #d3ecb6; }
+.SK.Period tr:nth-child(4n+0) .Darker, .SK.Period tr:nth-child(4n-1) .Darker { background-color: #d3ecb6; }
 .SK.Period .JamNumber { width: 30px; }
 .SK.Period .Jammer { width: 50px; }
 .SK.Period .Narrow, .Period .SmallHead { width: 14px; }
