Make flat&bright default, and fix Red box.
The brighter the better for projectors.
Flat&bright shouldn't have a gradient on the OR/TO/OTO box.

Fix handling of removal of scoreboard_dots.

--- a/html/views/standard/index.css
+++ b/html/views/standard/index.css
@@ -102,6 +102,10 @@ body.box_flat .Box.Red {
 	border-radius: 5px !important;
 }
 
+body.box_flat.bright .Box.Red {
+	background: #FF4040;
+}
+
 body.box_flat .FlatDark {
   color: #FFFFFF;
 }
