--- a/html/views/wb/whiteboard.html
+++ b/html/views/wb/whiteboard.html
@@ -27,6 +27,12 @@
 			</thead>
 			<tbody>
 			</tbody>
+			<tfoot>
+				<tr id="foot1">
+					<td colspan="11">TEAM TOTAL</td>
+					<td class="teamTotal">0</td>
+				</tr>
+			</tfoot>
 		</table>
 		<table class="Team Team2" cellpadding="0" cellspacing="0" border="1">
 			<thead>
@@ -39,6 +45,12 @@
 			</thead>
 			<tbody>
 			</tbody>
+			<tfoot>
+				<tr id="foot2">
+					<td colspan="11">TEAM TOTAL</td>
+					<td class="teamTotal">0</td>
+				</tr>
+			</tfoot>
 		</table>
 	</body>
 </html>
