Add option to make interactive overlay transparent.
Make this the default, almost everything supports it out of the box.

Fix handling of lower third text.

--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -63,6 +63,14 @@
 			</div>
 
 		</p>
+		<p id="Background" class="Panel">
+			<h2>Background</h2>
+			<select class="Selector" id="BackgroundColor" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.BackgroundColor)" data-field="data-next">
+				<option value="transparent">Transparent</option>
+				<option value="#00ff00">Green</option>
+			</select>
+		</p>
+
 
 	</div>
 	<div id="Preview">
