--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -156,7 +156,7 @@
 			</div>
 
 	</div>
-	<div id="VIDEO-GREEN" class="VideoBackground"></div>
+	<div id="VIDEO-BG" class="VideoBackground"></div>
 	<div id="VIDEO-CAMERA" class="VideoBackground"><video></video></div>
 </html>
 
