--- a/html/views/overlays/interactive/index.css
+++ b/html/views/overlays/interactive/index.css
@@ -22,7 +22,7 @@ body		{ margin: 0 auto; }
 
 .VideoBackground { width: 100%; height: 100%; top: 0; left: 0; position: absolute; z-index: -99; }
 video		{ width: 100%; height: 100%; }
-#VIDEO-GREEN	{ background-color: #00ff00;  }
+#VIDEO-BG	{ background-color: transparent;  }
 
 body 		{ 
 		  font-family: 'Ubuntu', 'LiberationSans', helvetica; font-weight: bold; margin: 0; padding: 0; overflow: hidden; 
