--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Penalty Lineup Tracker</title>
+		<title>Penalty Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -13,13 +13,10 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="plt.js"></script>
-		<script type="text/javascript" src="../lt/lt.js"></script>
+		<script type="text/javascript" src="/controls/plt/plt.js"></script>
 	</head>
 	<body>
-		<div id="plt"></div>
-		<div id="lt" width="100%"></div>
-		<div id="PenaltyEditor"></div>
-		<div id="FieldingEditor"></div>
+		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
+	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
 	</body>
 </html>
