--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -19,7 +19,7 @@
 					<div class="Team1" sbContext="Team(1)">	
 					<div class="Team Row Wrapper barBackgroundTop"> 
 						<div class="Indicator ColourTeam1 Box">&nbsp;</div>
-						<div class="Name  VerticalCenter Box" sbDisplay="Name"></div>
+						<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay).Name,Name" sbModify="nameUpdate"></div>
 						<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
 						<div class="Mini Box">
 							<div class="JamScore" sbDisplay="JamScore"></div>
@@ -39,7 +39,7 @@
 					<div class="Team2" sbContext="Team(2)">
 						<div class="Team Row Wrapper barBackgroundBottom">
 							<div class="Indicator ColourTeam2 Box">&nbsp;</div>
-							<div class="Name Box" sbDisplay="Name"></div>
+							<div class="Name Box" sbDisplay="AlternateName(overlay).Name,Name" sbModify="nameUpdate"></div>
 							<div class="Score Box" sbDisplay="Score"></div>
 							<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
 							<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
