Migrate overlay team settings to admin page
Remove the old overlay settings page, as
it's no longer required.

This uses the HTML5 color input, as our
existing one is tied to the XML.

--- a/html/views/overlays/interactive/admin.css
+++ b/html/views/overlays/interactive/admin.css
@@ -23,6 +23,18 @@ button, input, select {
     margin-bottom: 2px;
 }
 
+input[type="color"] {
+    padding: 0;
+    width: 75%;
+}
+input[type="color"][cleared="true"] + button {
+    background-color: #ff0000;
+}
+button.ClearPrev {
+    padding: 0;
+    width: 20%;
+}
+
 select { display: inline-block; appearance:none; }
 
 button.ToggleSwitch {
