--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -17,9 +17,6 @@
 			<button data-key="J" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowJammers)" class="ToggleSwitch">Jammers [J]</button><br/>
 		</p>
 
-		<h2>Notify</h2>
-		<button data-key="A" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Alert)" class="ToggleSwitch ToggleAlert">Cue Alert [A]</button><br/>
-
 		<p id="Panel">
 			<h2>Panels</h2>
 			<select class="SelectUpdator" id="PanelOverlay" data-subforms=".ExtraForm" data-target="#OverlayType" data-setting="ScoreBoard.Settings.Overlay.Interactive.Panel" data-field="data-next">
@@ -70,7 +67,17 @@
 				<option value="#00ff00">Green</option>
 			</select>
 		</p>
-
+		<div id="TeamOptions" class="Panel" sbContext="ScoreBoard">
+			<h2>Team Display</h2>
+			<label>1 - Name/FG/BG</label>
+			<input data-setting="ScoreBoard.Team(1).AlternateName(overlay).Name" type="text"/><br/>
+			<input data-setting="ScoreBoard.Team(1).Color(overlay_fg).Color" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(1).Color(overlay_bg).Color" type="color"/><button class="ClearPrev">X</button></br>
+			<label>2 - Name/FG/BG</label>
+			<input data-setting="ScoreBoard.Team(2).AlternateName(overlay).Name" type="text"/><br/>
+			<input data-setting="ScoreBoard.Team(2).Color(overlay_fg).Color" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(2).Color(overlay_bg).Color" type="color"/><button class="ClearPrev">X</button></br>
+		</div>
 
 	</div>
 	<div id="Preview">
