--- a/html/views/copy.html
+++ b/html/views/copy.html
@@ -12,9 +12,9 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/controls/sk/sk.js"></script>
-		<script type="text/javascript" src="/controls/plt/plt.js"></script>
-		<script type="text/javascript" src="/controls/lt/lt.js"></script>
+		<script type="text/javascript" src="/controls/sk/sk-sheet.js"></script>
+		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
+		<script type="text/javascript" src="/controls/lt/lt-sheet.js"></script>
 	</head>
 	<body>
 		<div id="sk1"></div>
