Use black thead for IWB, so colours show same as on scoreboard.

--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -10,7 +10,7 @@
 		<div class="DisplayPane" id="image"><img class="object"/></div>
 		<div class="DisplayPane" id="video"><video class="object" onended="this.play();"></video></div>
 		<div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
-		<div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/tcdg2016wb.html"></iframe></div>
+		<div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
 		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard" class="JamScore">
 			<div class="Team Team1 Left" sbContext="Team(1)">
 				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard).Name"></div>
