Link to the Copy endpoint, add instructions.

--- a/html/views/copy.html
+++ b/html/views/copy.html
@@ -17,6 +17,14 @@
 		<script type="text/javascript" src="/controls/lt/lt-sheet.js"></script>
 	</head>
 	<body>
+		<p>
+		The preferred way to export to a statsbook is <a href="https://github.com/AdamSmasherDerby/CRG-To-Statsbook">CRG-To-Statsbook</a>.
+		</p>
+		<p>
+		This page allows you to copy and paste these tables directly into a WFTDA statsbook,
+		however there are various caveats such as the rosters must match exactly and incorrect usage
+		may break the statsbook. Support is not provided for this page.
+		</p>
 		<div id="sk1"></div>
 		<div id="sk2"></div>
 		<div id="plt11"></div>
