Fix team colours and copy.html (#252)
* Fix team colours and copy.html

Use the same default background for everywhere
we use the team colours on an operator page, so
that it won't be visible for the SBO and not others.

* Use black thead for IWB, so colours show same as on scoreboard.

* Show penalty counts for the right teams

* Prevent empty-string color names.

I keep on adding these by accident.

--- a/html/controls/plt/plt-input.css
+++ b/html/controls/plt/plt-input.css
@@ -13,7 +13,12 @@ table.PLT, .PLT table, .PLT tr, .PLT td, #PenaltyEditor table, #PenaltyEditor tr
 	width: 99%;
 	top: 0%;
 }
-.PLT.Team thead td { font-size: 1em; font-weight: bold; background-color: #222; color: #FFF; }
+/* Colors are the same as the operator controls, so per-team colours look the same on both. */
+.PLT.Team thead td { font-size: 1em; font-weight: bold; background-color: #cccccc; color: #333333; }
+
+/* Similarly for the IWB view and the scoreboard. */
+.PLT.Team.AlternateName_scoreboard thead td { background-color: #000; color: #FFF; }
+
 .PLT.Team td { text-align: center; vertical-align: middle; }
 .PLT.Team .Number, .PLT.Team .Box, .PLT.Team .Total, .PLT.Team .Advance { width: 5%; }
 .PLT.Team .Role, .PLT.Team .Sitting { width: 7%; }
