--- a/html/views/standard/index.css
+++ b/html/views/standard/index.css
@@ -23,6 +23,12 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
+
+	user-select: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
 }
 
 #scoreboard {
