--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -120,7 +120,7 @@ table.RowTable { border-spacing: 0px; }
 	#Teams table.Skaters.Empty tr:last-of-type>th:last-of-type { border-radius: 0px 0px 12px 0px; }
 	#Teams table.Skaters tr:last-of-type>td:first-of-type { border-radius: 0px 0px 0px 12px; }
 	#Teams table.Skaters tr:last-of-type>td:last-of-type { border-radius: 0px 0px 12px 0px; }
-	#Teams table.Skaters col.Id { width: 15%; }
+	#Teams table.Skaters tbody tr:nth-child(2n) { background: #ccc; }
 	#Teams table.Skaters col.Name { width: 40%; }
 	#Teams table.Skaters col.Number { width: 30%; }
 	#Teams table.Skaters col.Button { width: 15%; }
