--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -75,6 +75,7 @@ table.RowTable { border-spacing: 0px; }
 
 	#TeamTime table.Time>tbody>tr>td { width: 20%; }
 	#TeamTime table.Time tr.Name td.Name.Running { background: #3f3; }
+	#TeamTime table.Time tr.Name td.Name.Running.NoMoreJam { background: #f33; }
 	#TeamTime table.Time tr.Name td.Name a { font-size: 150%; }
 	#TeamTime table.Time tr.Name td.Name a.InvertedTime { padding-left: 5px; font-size: 75%; }
 	#TeamTime table.Time tr.Name td.Name a.InvertedTime:before { content: "("; }
