Make Team colors and alternate names ValWithId
They are just key value pairs, no need to have an extra class for each.

This changes the API for the elements to what it was in WS in 3.9.5
(Team(t).AlternateName and Team(t).Color - the additional .Name resp.
.Color is removed)

--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -13,7 +13,7 @@
 		<div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
 		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard" class="JamScore">
 			<div class="Team Team1 Left" sbContext="Team(1)">
-				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard).Name,Name"></div>
+				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="Team Team2 Right" sbContext="Team(2)">
-				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard).Name,Name"></div>
+				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
