--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -70,13 +70,13 @@
 		<div id="TeamOptions" class="Panel" sbContext="ScoreBoard">
 			<h2>Team Display</h2>
 			<label>1 - Name/FG/BG</label>
-			<input data-setting="ScoreBoard.Team(1).AlternateName(overlay).Name" type="text"/><br/>
-			<input data-setting="ScoreBoard.Team(1).Color(overlay_fg).Color" type="color"/><button class="ClearPrev">X</button></br>
-			<input data-setting="ScoreBoard.Team(1).Color(overlay_bg).Color" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(1).AlternateName(overlay)" type="text"/><br/>
+			<input data-setting="ScoreBoard.Team(1).Color(overlay_fg)" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(1).Color(overlay_bg)" type="color"/><button class="ClearPrev">X</button></br>
 			<label>2 - Name/FG/BG</label>
-			<input data-setting="ScoreBoard.Team(2).AlternateName(overlay).Name" type="text"/><br/>
-			<input data-setting="ScoreBoard.Team(2).Color(overlay_fg).Color" type="color"/><button class="ClearPrev">X</button></br>
-			<input data-setting="ScoreBoard.Team(2).Color(overlay_bg).Color" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(2).AlternateName(overlay)" type="text"/><br/>
+			<input data-setting="ScoreBoard.Team(2).Color(overlay_fg)" type="color"/><button class="ClearPrev">X</button></br>
+			<input data-setting="ScoreBoard.Team(2).Color(overlay_bg)" type="color"/><button class="ClearPrev">X</button></br>
 		</div>
 
 	</div>
