Add rosters to the copy page.

--- a/html/views/copy.html
+++ b/html/views/copy.html
@@ -12,6 +12,7 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/views/roster-sheet.js"></script>
 		<script type="text/javascript" src="/controls/sk/sk-sheet.js"></script>
 		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
 		<script type="text/javascript" src="/controls/lt/lt-sheet.js"></script>
@@ -25,6 +26,8 @@
 		however there are various caveats such as the rosters must match exactly and incorrect usage
 		may break the statsbook. Support is not provided for this page.
 		</p>
+		<div id="roster1"></div>
+		<div id="roster2"></div>
 		<div id="sk1"></div>
 		<div id="sk2"></div>
 		<div id="plt11"></div>
