--- a/html/views/copy.html
+++ b/html/views/copy.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
 		<script type="text/javascript" src="/controls/lt/lt-sheet.js"></script>
 	</head>
-	<body>
+	<body class="AllowSelect">
 		<p>
 		The preferred way to export to a statsbook is <a href="https://github.com/AdamSmasherDerby/CRG-To-Statsbook">CRG-To-Statsbook</a>.
 		</p>
