--- a/html/controls/sk/sk-sheet.css
+++ b/html/controls/sk/sk-sheet.css
@@ -6,6 +6,13 @@ table.SK, .SK .table, .SK tr, .SK td, #TripEditor table, #TripEditor tr, #TripEd
 	border-collapse: collapse;
 	border-color:#777;
 }
+body:not(.AllowSelect) .SK {
+	user-select: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+}
 .SK tr {
     color: #333;
 }
