Fix and reorganize overlay code.
Correctly handle skaters changing number, skaters
with no name, skaters with no number, ignore foexp (for now),
count penalties correctly when colouring, handle null logo.

Break down big functions into smaller more understandable parts,
and use the new WS functionality to simplify.

--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -95,7 +95,7 @@
 				</div>
 
 
-				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>
 					<h2>Team Roster</h2>
@@ -105,7 +105,7 @@
 					</div>
 				</div>
 
-				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 
-				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 
-				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
