--- a/html/views/overlays/interactive/index.css
+++ b/html/views/overlays/interactive/index.css
@@ -2,7 +2,7 @@
  * Interactive Overlay
  * Copyright (C) 2015 Flat Track Protocol (Jared Quinn) <ftp@rollerder.by>
  *
- * Based on work by 
+ * Based on work by
  *
  * Copyright (C) 2013 Rob Thomas <xrobau@gmail.com>
  * Copyright (C) 2013 Damian Georgiou <bachomp@gmail.com>
@@ -17,24 +17,23 @@
 html 		{ height: 100%; width: 100%; }
 body		{ margin: 0 auto; }
 
-.preload * { transition: none !important; }                                                                                                                                                                        
-
+.preload * { transition: none !important; }
 
 .VideoBackground { width: 100%; height: 100%; top: 0; left: 0; position: absolute; z-index: -99; }
 video		{ width: 100%; height: 100%; }
 #VIDEO-BG	{ background-color: transparent;  }
 
-body 		{ 
-		  font-family: 'Ubuntu', 'LiberationSans', helvetica; font-weight: bold; margin: 0; padding: 0; overflow: hidden; 
+body 		{
+		  font-family: 'Ubuntu', 'LiberationSans', helvetica; font-weight: bold; margin: 0; padding: 0; overflow: hidden;
 		}
 div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: hidden; }
 
-.barBackgroundTop { 
+.barBackgroundTop {
 	background: silver;
 	background: linear-gradient(to bottom, #eee, #ddd 30%, #eee 60%, #bbb);
 }
 
-.barBackgroundBottom { 
+.barBackgroundBottom {
 	background: silver;
 	background: linear-gradient(to bottom, #bbb, #ccc 30%, #ddd 60%, #eee);
 }
@@ -50,7 +49,7 @@ div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: h
 .Box 			{ float: left; margin: 0; padding: 0; position: relative; display: block; }
 
 /* Team Boxes */
-.Team .Name 		{ width: 64%; padding-left: 1%; 
+.Team .Name 		{ width: 64%; padding-left: 1%;
                   border-left: 2px solid #666;  }
 .Team .Score		{ width: 18%; text-align: right; padding-right: .1em ; font-size: 90%; }
 .Team .Mini		{ width: 8%; font-size: 45%; line-height: 99%; padding-top: 2px; }
@@ -75,7 +74,7 @@ div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: h
 @-webkit-keyframes DotActive {  0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
 @keyframes DotActive         {  0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
 
-.ShowJammers .Team .JammerBox.Clock   { width: 80%; position: absolute; margin-left: -60%; background: #999; height: 50%; border-radius: 10px 10px; color: white; text-align: right; padding-right: 20px } 
+.ShowJammers .Team .JammerBox.Clock   { width: 80%; position: absolute; margin-left: -60%; background: #999; height: 50%; border-radius: 10px 10px; color: white; text-align: right; padding-right: 20px }
 
 .ClockBox .Name		{ width: 49%;  }
 .ClockBox .Time		{ width: 49%;  }
@@ -128,8 +127,8 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 
 .AnimatedPanel				{ position: absolute; display: block; overflow: none; padding: 0; }
 .AnimatedPanel.LargePanel		{ width: 75%; top: 15%;  margin: 0 auto; }
-.AnimatedPanel.MediumPanel		{ bottom: 5%; width: 20%; height: 8em; top: auto; border-radius: 10px; left: 40%;  } 
-.AnimatedPanel.LowerThird 		{ top: 80%; left: 0; text-align: right; min-width: 45%; width: auto; } 
+.AnimatedPanel.MediumPanel		{ bottom: 5%; width: 20%; height: 8em; top: auto; border-radius: 10px; left: 40%;  }
+.AnimatedPanel.LowerThird 		{ top: 80%; left: 0; text-align: right; min-width: 45%; width: auto; }
 
 .TeamBox 				      { top: 2%; left: 10%; font-size: 1.8em; line-height: 100%; width: 23em;   }
 
@@ -188,6 +187,7 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 
 .OverlayPanel h1, .OverlayPanel h2	{ margin-left: 10%; margin-right: 0; }
 .NoLogo h1, .NoLogo h2			{ margin-left: 0; }
+.NoLogo img { display: none; }
 
 
 .PPJBox h4				{ text-transform: uppercase; text-align: center; font-size: 1.4em; }
@@ -202,19 +202,18 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 
 .JammerStar { text-align: center;  color: #ddd; position: absolute; font-size: 1.6em; font-weight: normal; }
 .Points	    { width: 100%; text-align: center;  color: #333; position: absolute; font-size: 1.6em; font-weight: normal; height: 2em; }
- 
+
 .Team1 .Points	   { top:  0vh; }
 .Team1 .JammerStar { top:  3vh; }
 .Team2 .JammerStar { top: 15vh; }
 .Team2 .Points	   { top: 20vh; }
 
-.GraphBlock[lead="LostLead"] .JammerStar { color: #666; }
-.GraphBlock[lead="LostLead"] .JammerStar:after { content: '\02297'; }
+.GraphBlock[lead=true][lost=true] .JammerStar { color: #666; }
+.GraphBlock[lead=true][lost=true] .JammerStar:after { content: '\02297'; }
 
-.GraphBlock[lead="Lead"] .JammerStar 	 { color: #666; }
-.GraphBlock[lead="Lead"] .JammerStar:after { content: '\02605'; }
+.GraphBlock[lead=true] .JammerStar 	 { color: #666; }
+.GraphBlock[lead=true] .JammerStar:after { content: '\02605'; }
 
-/* .Skater .Flags[data-flag="C"]:after { content: '\000A9'; visibility: visible; } */
 .Skater .Flags[data-flag="C"]:after { content: 'C'; visibility: visible; }
 .Skater .Flags[data-flag="AC"]:after { content: '\00040'; visibility: visible; }
 .Skater .Flags[data-flag="BC"]:after { content: 'B'; visibility: visible; }
