--- a/html/controls/sk/sk-sheet.css
+++ b/html/controls/sk/sk-sheet.css
@@ -34,3 +34,4 @@ body:not(.AllowSelect) .SK {
 
 #TripEditor input[type="number"] { width: 50px; }
 #TripEditor td { padding-bottom: 0.5em; }
+#TripEditor .buttons td { text-align: center; }
