Reorganize HTML files
* Move components that are used by multiple screens (e.g. the sheets) to
a new /components folder.
* Place all input screens under /nso/<position>
* Place settings screens under /settings/<screen>
* We only have one overlay. Move it to /views/overlay, removing the
additional directory layer.

--- a/html/views/overlay/admin/index.html
+++ b/html/views/overlay/admin/index.html
@@ -3,7 +3,7 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
-		<script type="text/javascript" src="dataset.js"></script>
+		<script type="text/javascript" src="../dataset.js"></script>
 	</head>
 
 	<body>
@@ -81,7 +81,7 @@
 
 	</div>
 	<div id="Preview">
-		<iframe src="index.html" style="border: 3px solid black; margin: 10px; width: 1080px; height: 720px; ">
+		<iframe src="../index.html" style="border: 3px solid black; margin: 10px; width: 1080px; height: 720px; ">
 		</iframe>
 	</div>
 
