--- a/html/views/copy/index.html
+++ b/html/views/copy/index.html
@@ -12,10 +12,14 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/views/roster-sheet.js"></script>
-		<script type="text/javascript" src="/controls/sk/sk-sheet.js"></script>
-		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
-		<script type="text/javascript" src="/controls/lt/lt-sheet.js"></script>
+		<script type="text/javascript" src="/components/roster-sheet.js"></script>
+		<script type="text/javascript" src="/components/sk-sheet.js"></script>
+		<script type="text/javascript" src="/components/plt-input.js"></script>
+		<script type="text/javascript" src="/components/lt-sheet.js"></script>
+		<link rel="stylesheet" href="/components/roster-sheet.css" type="text/css" />
+		<link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
+		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
+		<link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
 	</head>
 	<body class="AllowSelect">
 		<p>
