--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -3,7 +3,7 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
-		<script type="text/javascript" src="/views/standard/common.js"></script>
+		<script type="text/javascript" src="/views/common.js"></script>
 
 		<style  type="text/css" title="jsStyle"></style>
 	</head>
