--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -12,7 +12,8 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
+		<script type="text/javascript" src="/components/plt-input.js"></script>
+		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
 	</head>
 	<body>
 		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
