Allow Jammers to be changed in SK sheet
closes #354

--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -42,3 +42,5 @@ body:not(.AllowSelect) .SK {
 #TripEditor .buttons td { text-align: center; }
 #TripEditor .ui-button { font-size: 75%; }
 #TripEditor .ui-button.checked { background: #3f3; }
+
+#skaterSelector .Hide { display: none; }
