Add a dialog to select the team on (P)LT screens
Open the dialog if on loading no team is selected.

--- a/html/components/plt-input.css
+++ b/html/components/plt-input.css
@@ -78,3 +78,6 @@ body:not(.AllowSelect) .PLT {
 
 #AnnotationEditor .Hide { display: none; }
 #AnnotationEditor .ui-button { font-size: 75%; }
+
+#OptionsDialog table { text-align: center; margin-left: auto; margin-right: auto;}
+#OptionsDialog .selected { background: #3f3; }
